message/y.output

state 0
	$accept: .spec $end 

	VAR_UUID  shift 13
	VAR_TYPE  shift 14
	VAR_LOGGER  shift 15
	VAR_PAYLOAD  shift 16
	VAR_ENVVERSION  shift 17
	VAR_HOSTNAME  shift 18
	VAR_TIMESTAMP  shift 19
	VAR_SEVERITY  shift 20
	VAR_PID  shift 21
	VAR_FIELDS  shift 10
	TRUE  shift 11
	FALSE  shift 12
	'('  shift 3
	.  error

	spec  goto 1
	expr  goto 2
	string_vars  goto 8
	numeric_vars  goto 9
	string_test  goto 4
	numeric_test  goto 5
	field_test  goto 6
	boolean  goto 7

state 1
	$accept:  spec.$end 
	spec:  spec.expr 

	$end  accept
	VAR_UUID  shift 13
	VAR_TYPE  shift 14
	VAR_LOGGER  shift 15
	VAR_PAYLOAD  shift 16
	VAR_ENVVERSION  shift 17
	VAR_HOSTNAME  shift 18
	VAR_TIMESTAMP  shift 19
	VAR_SEVERITY  shift 20
	VAR_PID  shift 21
	VAR_FIELDS  shift 10
	TRUE  shift 11
	FALSE  shift 12
	'('  shift 3
	.  error

	expr  goto 22
	string_vars  goto 8
	numeric_vars  goto 9
	string_test  goto 4
	numeric_test  goto 5
	field_test  goto 6
	boolean  goto 7

state 2
	spec:  expr.    (1)
	expr:  expr.OP_AND expr 
	expr:  expr.OP_OR expr 

	OP_OR  shift 24
	OP_AND  shift 23
	.  reduce 1 (src line 96)


state 3
	expr:  '('.expr ')' 

	VAR_UUID  shift 13
	VAR_TYPE  shift 14
	VAR_LOGGER  shift 15
	VAR_PAYLOAD  shift 16
	VAR_ENVVERSION  shift 17
	VAR_HOSTNAME  shift 18
	VAR_TIMESTAMP  shift 19
	VAR_SEVERITY  shift 20
	VAR_PID  shift 21
	VAR_FIELDS  shift 10
	TRUE  shift 11
	FALSE  shift 12
	'('  shift 3
	.  error

	expr  goto 25
	string_vars  goto 8
	numeric_vars  goto 9
	string_test  goto 4
	numeric_test  goto 5
	field_test  goto 6
	boolean  goto 7

state 4
	expr:  string_test.    (35)

	.  reduce 35 (src line 181)


state 5
	expr:  numeric_test.    (36)

	.  reduce 36 (src line 182)


state 6
	expr:  field_test.    (37)

	.  reduce 37 (src line 183)


state 7
	expr:  boolean.    (38)

	.  reduce 38 (src line 184)


state 8
	string_test:  string_vars.relational STRING_VALUE 
	string_test:  string_vars.regexp REGEXP_VALUE 

	OP_EQ  shift 28
	OP_NE  shift 29
	OP_GT  shift 30
	OP_GTE  shift 31
	OP_LT  shift 32
	OP_LTE  shift 33
	OP_RE  shift 34
	OP_NRE  shift 35
	.  error

	relational  goto 26
	regexp  goto 27

state 9
	numeric_test:  numeric_vars.relational NUMERIC_VALUE 

	OP_EQ  shift 28
	OP_NE  shift 29
	OP_GT  shift 30
	OP_GTE  shift 31
	OP_LT  shift 32
	OP_LTE  shift 33
	.  error

	relational  goto 36

state 10
	field_test:  VAR_FIELDS.relational NUMERIC_VALUE 
	field_test:  VAR_FIELDS.relational STRING_VALUE 
	field_test:  VAR_FIELDS.OP_EQ boolean 
	field_test:  VAR_FIELDS.regexp REGEXP_VALUE 
	field_test:  VAR_FIELDS.eqneq NIL_VALUE 

	OP_EQ  shift 38
	OP_NE  shift 41
	OP_GT  shift 30
	OP_GTE  shift 31
	OP_LT  shift 32
	OP_LTE  shift 33
	OP_RE  shift 34
	OP_NRE  shift 35
	.  error

	relational  goto 37
	eqneq  goto 40
	regexp  goto 39

state 11
	boolean:  TRUE.    (30)

	.  reduce 30 (src line 166)


state 12
	boolean:  FALSE.    (31)

	.  reduce 31 (src line 166)


state 13
	string_vars:  VAR_UUID.    (13)

	.  reduce 13 (src line 112)


state 14
	string_vars:  VAR_TYPE.    (14)

	.  reduce 14 (src line 113)


state 15
	string_vars:  VAR_LOGGER.    (15)

	.  reduce 15 (src line 114)


state 16
	string_vars:  VAR_PAYLOAD.    (16)

	.  reduce 16 (src line 115)


state 17
	string_vars:  VAR_ENVVERSION.    (17)

	.  reduce 17 (src line 116)


state 18
	string_vars:  VAR_HOSTNAME.    (18)

	.  reduce 18 (src line 117)


state 19
	numeric_vars:  VAR_TIMESTAMP.    (19)

	.  reduce 19 (src line 119)


state 20
	numeric_vars:  VAR_SEVERITY.    (20)

	.  reduce 20 (src line 120)


state 21
	numeric_vars:  VAR_PID.    (21)

	.  reduce 21 (src line 121)


state 22
	spec:  spec expr.    (2)
	expr:  expr.OP_AND expr 
	expr:  expr.OP_OR expr 

	OP_OR  shift 24
	OP_AND  shift 23
	.  reduce 2 (src line 97)


state 23
	expr:  expr OP_AND.expr 

	VAR_UUID  shift 13
	VAR_TYPE  shift 14
	VAR_LOGGER  shift 15
	VAR_PAYLOAD  shift 16
	VAR_ENVVERSION  shift 17
	VAR_HOSTNAME  shift 18
	VAR_TIMESTAMP  shift 19
	VAR_SEVERITY  shift 20
	VAR_PID  shift 21
	VAR_FIELDS  shift 10
	TRUE  shift 11
	FALSE  shift 12
	'('  shift 3
	.  error

	expr  goto 42
	string_vars  goto 8
	numeric_vars  goto 9
	string_test  goto 4
	numeric_test  goto 5
	field_test  goto 6
	boolean  goto 7

state 24
	expr:  expr OP_OR.expr 

	VAR_UUID  shift 13
	VAR_TYPE  shift 14
	VAR_LOGGER  shift 15
	VAR_PAYLOAD  shift 16
	VAR_ENVVERSION  shift 17
	VAR_HOSTNAME  shift 18
	VAR_TIMESTAMP  shift 19
	VAR_SEVERITY  shift 20
	VAR_PID  shift 21
	VAR_FIELDS  shift 10
	TRUE  shift 11
	FALSE  shift 12
	'('  shift 3
	.  error

	expr  goto 43
	string_vars  goto 8
	numeric_vars  goto 9
	string_test  goto 4
	numeric_test  goto 5
	field_test  goto 6
	boolean  goto 7

state 25
	expr:  '(' expr.')' 
	expr:  expr.OP_AND expr 
	expr:  expr.OP_OR expr 

	OP_OR  shift 24
	OP_AND  shift 23
	')'  shift 44
	.  error


state 26
	string_test:  string_vars relational.STRING_VALUE 

	STRING_VALUE  shift 45
	.  error


state 27
	string_test:  string_vars regexp.REGEXP_VALUE 

	REGEXP_VALUE  shift 46
	.  error


state 28
	relational:  OP_EQ.    (3)

	.  reduce 3 (src line 99)


state 29
	relational:  OP_NE.    (4)

	.  reduce 4 (src line 100)


state 30
	relational:  OP_GT.    (5)

	.  reduce 5 (src line 101)


state 31
	relational:  OP_GTE.    (6)

	.  reduce 6 (src line 102)


state 32
	relational:  OP_LT.    (7)

	.  reduce 7 (src line 103)


state 33
	relational:  OP_LTE.    (8)

	.  reduce 8 (src line 104)


state 34
	regexp:  OP_RE.    (11)

	.  reduce 11 (src line 109)


state 35
	regexp:  OP_NRE.    (12)

	.  reduce 12 (src line 110)


state 36
	numeric_test:  numeric_vars relational.NUMERIC_VALUE 

	NUMERIC_VALUE  shift 47
	.  error


state 37
	field_test:  VAR_FIELDS relational.NUMERIC_VALUE 
	field_test:  VAR_FIELDS relational.STRING_VALUE 

	STRING_VALUE  shift 49
	NUMERIC_VALUE  shift 48
	.  error


state 38
	relational:  OP_EQ.    (3)
	eqneq:  OP_EQ.    (9)
	field_test:  VAR_FIELDS OP_EQ.boolean 

	NIL_VALUE  reduce 9 (src line 106)
	TRUE  shift 11
	FALSE  shift 12
	.  reduce 3 (src line 99)

	boolean  goto 50

state 39
	field_test:  VAR_FIELDS regexp.REGEXP_VALUE 

	REGEXP_VALUE  shift 51
	.  error


state 40
	field_test:  VAR_FIELDS eqneq.NIL_VALUE 

	NIL_VALUE  shift 52
	.  error


state 41
	relational:  OP_NE.    (4)
	eqneq:  OP_NE.    (10)

	NIL_VALUE  reduce 10 (src line 107)
	.  reduce 4 (src line 100)


state 42
	expr:  expr.OP_AND expr 
	expr:  expr OP_AND expr.    (33)
	expr:  expr.OP_OR expr 

	.  reduce 33 (src line 171)


state 43
	expr:  expr.OP_AND expr 
	expr:  expr.OP_OR expr 
	expr:  expr OP_OR expr.    (34)

	OP_AND  shift 23
	.  reduce 34 (src line 176)


state 44
	expr:  '(' expr ')'.    (32)

	.  reduce 32 (src line 167)


state 45
	string_test:  string_vars relational STRING_VALUE.    (22)

	.  reduce 22 (src line 123)


state 46
	string_test:  string_vars regexp REGEXP_VALUE.    (23)

	.  reduce 23 (src line 128)


state 47
	numeric_test:  numeric_vars relational NUMERIC_VALUE.    (24)

	.  reduce 24 (src line 134)


state 48
	field_test:  VAR_FIELDS relational NUMERIC_VALUE.    (25)

	.  reduce 25 (src line 140)


state 49
	field_test:  VAR_FIELDS relational STRING_VALUE.    (26)

	.  reduce 26 (src line 145)


state 50
	field_test:  VAR_FIELDS OP_EQ boolean.    (27)

	.  reduce 27 (src line 150)


state 51
	field_test:  VAR_FIELDS regexp REGEXP_VALUE.    (28)

	.  reduce 28 (src line 155)


state 52
	field_test:  VAR_FIELDS eqneq NIL_VALUE.    (29)

	.  reduce 29 (src line 160)


31 terminals, 12 nonterminals
39 grammar rules, 53/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 50/120000
7 extra closures
104 shift entries, 3 exceptions
19 goto entries
24 entries saved by goto default
Optimizer space used: output 77/120000
77 table entries, 8 zero
maximum spread: 31, maximum offset: 38
